apps/taskchampion/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "taskchampion"
spec:
  selector:
    app: "taskchampion"
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: "taskchampion"
