apps/taskchampion/networkpolicy.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "taskchampion"
spec:
  podSelector: {}
  policyTypes:
    - "Egress"
    - "Ingress"
  ingress:
    - ports:
        - protocol: "TCP"
          port: "taskchampion"
      from: []
  egress: []
